--- a/templates/form.html
+++ b/templates/form.html
@@ -1,24 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
+
 <body>
-    <form method="post" action="/form">
-        <input type="date" name="dob" id="">
-        <input type="text" name="gender" id="">
-        <input type="text" name="address" id="">
-        <input type="checkbox" name="courses1" id="course1"><label for="course1">python</label>
-        <input type="checkbox" name="courses2" id="course2"><label for="course1">js</label>
-        <input type="checkbox" name="courses3" id="course3"><label for="course1">java</label>
-        <button type="submit">submit</button>
-    </form>
-    {% if err %}
-        <script>alert('{{err}}');</script>
-    {% endif %}
-    
+    <section class="overflow-hidden">
+
+        <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+            <div class="row gx-lg-5 align-items-center mb-5">
+                <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+                    <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(225, 5%, 17%)">
+                        Enroll Now. <br />
+                        <span style="color: hsl(218, 81%, 75%)">Start learning.</span>
+                    </h1>
+                </div>
+
+                <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+                    <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+                    <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+                    <div class="card bg-glass">
+                        <div class="card-body px-4 py-5 px-md-5">
+                            <form method="post" action="/form">
+                                <!-- 2 column grid layout with text inputs for the first and last names -->
+                                <!-- <div class="row">
+                      <div class="col-md-6 mb-4">
+                        <div class="form-outline">
+                          <input type="text" id="form3Example1" class="form-control" />
+                          <label class="form-label" for="form3Example1">First name</label>
+                        </div>
+                      </div>
+                      <div class="col-md-6 mb-4">
+                        <div class="form-outline">
+                          <input type="text" id="form3Example2" class="form-control" />
+                          <label class="form-label" for="form3Example2">Last name</label>
+                        </div>
+                      </div>
+                    </div>
+       -->
+                                <!-- Email input -->
+                                <div class="form-outline mb-4">
+                                    <input type="date" name="dob" id="form3Example3" class="form-control" />
+                                    <label class="form-label" for="form3Example3">Date of Birth</label>
+                                </div>
+
+                                <!-- Password input -->
+                                <div class="form-outline mb-4">
+                                    <input type="text" name="gender" id="form3Example4" class="form-control" />
+                                    <label class="form-label" for="form3Example4">Gender
+                                    </label>
+                                </div>
+                                <div class="form-outline mb-4">
+                                    <input type="text" name="address" id="form3Example3" class="form-control" />
+                                    <label class="form-label" for="form3Example3">Address</label>
+                                </div>
+                                <!-- Checkbox -->
+                                <div class="form-outline mb-4">
+                                    <select name="course" class="form-select" aria-label="Default select example">
+                                        <option selected>Select Your Course</option>
+                                        <option value="1">One</option>
+                                        <option value="2">Two</option>
+                                        <option value="3">Three</option>
+                                    </select>
+                                </div>
+
+                                <!-- Submit button -->
+                                <button type="submit" class="btn btn-primary btn-block mb-4">
+                                    Enroll.
+                                </button>
+                                {% if err %}
+                                <script>alert('{{err}}');</script>
+                                {% endif %}
+
+                                <!-- Register buttons -->
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <!-- </body>
+<form method="post" action="/form">
+    <input type="date" name="dob" id="">
+    <input type="text" name="gender" id="">
+    <input type="text" name="address" id="">
+    <input type="checkbox" name="courses1" id="course1"><label for="course1">python</label>
+    <input type="checkbox" name="courses2" id="course2"><label for="course1">js</label>
+    <input type="checkbox" name="courses3" id="course3"><label for="course1">java</label>
+    <button type="submit">submit</button>
+</form>
+{% if err %}
+<script>alert('{{err}}');</script>
+{% endif %} -->
+
 </body>
+
 </html>
