--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
                             <div
                                 class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                 <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder"
-                                    href="#courses">All Courses</a>
+                                    href="#course">All Courses</a>
                                 <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
                                     href="/form">Enroll</a>
                             </div>
@@ -58,7 +58,7 @@
                             <div class="profile bg-gradient-primary-to-secondary">
                                 <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
                                 <!-- Watch a tutorial on how to do this on YouTube (link)-->
-                                <img class="profile-img" src="assets/profile.png" alt="...">
+                                <img class="profile-img" src="https://cdn.lynda.com/static/images/non-member/homepage-devices.jpg" alt="...">
                                 
                             </div>
                         </div>
@@ -67,12 +67,40 @@
             </div>
         </header>
         <!-- About Section-->
-        <section class="bg-light py-5">
+        <section id="course" class="bg-light py-5">
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xxl-8">
                         <div class="text-center my-5">
                             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">All Courses</span></h2>
+                            <div class="py-5">
+                                <div class="container">
+                                  <div class="row hidden-md-up">
+                                    <div class="col-md-4">
+                                      <div class="card">
+                                        <div class="card-block p-4">
+                                          <h4 class="card-title">Python 3</h4>
+                                          <h6 class="card-subtitle text-muted p-2">Programming</h6>
+                                          <p class="card-text p-y-1">From beginner to advance!</p>
+                                          <a href="/form" class="card-link">Enroll </a>
+                                          <!-- <a href="#" class="card-link"></a> -->
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="card">
+                                          <div class="card-block p-4">
+                                            <h4 class="card-title">Card title</h4>
+                                            <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+                                            <p class="card-text p-y-1">Some quick example text to build on the card title .</p>
+                                            <a href="#" class="card-link">link</a>
+                                            <a href="#" class="card-link">Second link</a>
+                                          </div>
+                                        </div>
+                                      </div>
+                                  </div>
+                                </div>
+                              </div>
                             <p class="lead fw-light mb-4"></p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
                                 <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
