--- a/templates/register.html
+++ b/templates/register.html
@@ -37,15 +37,15 @@
             <div class="row gx-lg-5 align-items-center mb-5">
                 <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
                     <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
-                        The best offer <br />
-                        <span style="color: hsl(218, 81%, 75%)">for your business</span>
+                        This Could Be Start <br />
+                        <span style="color: hsl(218, 81%, 75%)">of a new Career.</span>
                     </h1>
-                    <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
+                    <!-- <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                         Temporibus, expedita iusto veniam atque, magni tempora mollitia
                         dolorum consequatur nulla, neque debitis eos reprehenderit quasi
                         ab ipsum nisi dolorem modi. Quos?
-                    </p>
+                    </p> -->
                 </div>
 
                 <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
